--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,59 @@
-.App {
+.header-container {
+  height: 10vh;
+  background-color:#80ced6;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  box-shadow: 0px 2px 5px 1px #777;
+}
+
+ul {
+  list-style: none;
+}
+
+li {
+  display: inline;
+  padding: 10px;
+}
+
+a {
+  text-decoration: none;
+  color: #444
+}
+
+.appcontainer {
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+h1 {
+  font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.searchDiv {
+  margin: 20px;
+}
+
+.pokeContainer {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  flex-wrap: wrap;
+  margin-top: 15px;
 }
 
-.App-link {
-  color: #61dafb;
+.pokeContainer :hover {
+  background-color: #d5f4e6;
+  font-weight: bold;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.pokeDiv {
+  background-color: #80ced6;
+  border: 1px solid grey;
+  box-shadow: 1px 1px 6px 1px #aaa;
+  border-radius: 5px;
+  /* box-shadow: none|h-offset v-offset blur spread color  */
+  margin: 10px;
+  width: 130px;
+  text-align: center;
 }
+
+
+
